--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
+<meta type="description" content="Get you child to the future of education learn online with super concepts videos get certified prepare for exams tests and much more at very low cost" >
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML</title>
+  <title>iEduWeb-future of education learn online</title>
   <!-- HTML -->
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
